--- a/src/app/pages/products-page/product-view/product-add-new/product-add-new.component.html
+++ b/src/app/pages/products-page/product-view/product-add-new/product-add-new.component.html
@@ -19,9 +19,7 @@
         <input autoFocus required md-input [disabled]="mode === view" placeholder="{{'PRODUCT_INFO_NAME' | translate}}" name="name" [(ngModel)]="entity.name" type="text">
       </md-input-container>
 
-      <md-input-container style="margin-right: 25px;" [class.error]="formInvalid && !entity.name" class="entity-view__card__content__item">
-        <input md-input [disabled]="mode === view" placeholder="{{'PRODUCT_INFO_DESCRIPTION' | translate}}" name="description" [(ngModel)]="entity.description" type="text">
-      </md-input-container>
+      <md-textarea [disabled]="mode === view" placeholder="{{'PRODUCT_INFO_DESCRIPTION' | translate}}" name="description" [(ngModel)]="entity.description" type="text" rows="2"></md-textarea>
 
       <div class="product-view__group">
         <md-input-container [class.error]="formInvalid && !entity.sku" class="entity-view__card__content__item">
