Add colum preferences component

--- a/src/assets/scss/_entity-index.scss
+++ b/src/assets/scss/_entity-index.scss
@@ -24,6 +24,10 @@ $title-color: #8D8888;
     }
   }
 
+  &__preferences {
+    margin: 0 -40px 0 15px;
+  }
+
   &__add {
     position: absolute !important;
     top: 45px;
