--- a/src/app/pages/components/entities-table/entities-table.component.html
+++ b/src/app/pages/components/entities-table/entities-table.component.html
@@ -5,10 +5,12 @@
     <thead class="entity-index__table__header">
     <tr>
       <ng-container *ngFor="let params of columnParams">
-        <th (click)="setSortParams(params)" [class.cell--align-right]="params.align === 'right'" [class.cell--codeblock]="params.code">
-          {{params.label | translate}}
-          <md-icon *ngIf="params.sortApplied">{{params.sortOrder === 'asc' ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</md-icon>
-        </th>
+        <ng-container *ngIf="params.selected">
+          <th (click)="setSortParams(params)" [class.cell--align-right]="params.align === 'right'" [class.cell--codeblock]="params.code">
+            {{params.label | translate}}
+            <md-icon *ngIf="params.sortApplied">{{params.sortOrder === 'asc' ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</md-icon>
+          </th>
+        </ng-container>
       </ng-container>
       <th></th>
     </tr>
@@ -16,18 +18,22 @@
 
     <tbody>
     <tr *ngFor="let entity of (data | filterEntitiesByParams: columnParams: filterString | sortEntities: sortParams.mappingFunction: sortParams.sortOrder)">
-      <td (click)="selected.emit(entity)" *ngFor="let param of columnParams" [class.cell--align-right]="param.align === 'right'">
-        <div class="codeblock" *ngIf="param.code; else noCode">
-          {{param.mappingFunction(entity)}}
-        </div>
-        <ng-template #noCode>
-          <ng-container *ngIf="param.number; else nan">{{param.mappingFunction(entity) | numberlocale}}</ng-container>
-          <ng-template #nan>
-            <ng-container *ngIf="param.translate; else notranslate">{{param.mappingFunction(entity) | translate}}</ng-container>
-            <ng-template #notranslate>{{param.mappingFunction(entity)}}</ng-template>
-          </ng-template>
-        </ng-template>
-      </td>
+      <ng-container *ngFor="let param of columnParams">
+        <ng-container *ngIf="param.selected">
+          <td (click)="selected.emit(entity)" [class.cell--align-right]="param.align === 'right'">
+            <div class="codeblock" *ngIf="param.code; else noCode">
+              {{param.mappingFunction(entity)}}
+            </div>
+            <ng-template #noCode>
+              <ng-container *ngIf="param.number; else nan">{{param.mappingFunction(entity) | numberlocale}}</ng-container>
+              <ng-template #nan>
+                <ng-container *ngIf="param.translate; else notranslate">{{param.mappingFunction(entity) | translate}}</ng-container>
+                <ng-template #notranslate>{{param.mappingFunction(entity)}}</ng-template>
+              </ng-template>
+            </ng-template>
+          </td>
+        </ng-container>
+      </ng-container>
       <td>
         <table-actions
           [service]="service"
