--- a/src/app/pages/customers-page/customers-index/customers.component.html
+++ b/src/app/pages/customers-page/customers-index/customers.component.html
@@ -2,6 +2,7 @@
   <div class="entity-index__title">
     {{'CUSTOMER_INDEX_TITLE' | translate}}
     <md-input [(ngModel)]="filterValue" placeholder="{{'INDEXPAGE_FILTER' | translate}}"></md-input>
+    <table-preferences class="entity-index__preferences" [columnParams]="columnParams" (changed)="onColumnPreferencesChanged($event)"></table-preferences>
   </div>
 
   <button md-icon-button color="primary" *ngIf="hasWritePermission()" (click)="openAddMode()" class="entity-index__add"><md-icon>add</md-icon></button>
