--- a/src/app/pages/rebills-page/rebills-index/rebills.component.html
+++ b/src/app/pages/rebills-page/rebills-index/rebills.component.html
@@ -2,6 +2,7 @@
   <div class="entity-index__title">
     {{'REBILL_INDEX_TITLE' | translate}}
     <md-input [(ngModel)]="filterValue" placeholder="{{'INDEXPAGE_FILTER' | translate}}"></md-input>
+    <table-preferences class="entity-index__preferences" [columnParams]="columnParams" (changed)="onColumnPreferencesChanged($event)"></table-preferences>
   </div>
 
   <md-card class="entity-index__card">
