--- a/src/app/pages/campaigns-page/campaigns-index/campaigns.component.html
+++ b/src/app/pages/campaigns-page/campaigns-index/campaigns.component.html
@@ -2,7 +2,7 @@
   <div class="entity-index__title">
     {{'CAMPAIGN_INDEX_TITLE' | translate}}
     <md-input [(ngModel)]="filterValue" placeholder="{{'INDEXPAGE_FILTER' | translate}}"></md-input>
-    <table-preferences class="entity-index__preferences" [columnParams]="columnParams" (changed)="onColumnPreferencesChanged($event)"></table-preferences>
+    <table-preferences class="entity-index__preferences" [columnParams]="columnParams"></table-preferences>
   </div>
 
   <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="openAddMode()"><md-icon>add</md-icon></button>
