--- a/src/app/pages/components/table-memory/table-memory.component.html
+++ b/src/app/pages/components/table-memory/table-memory.component.html
@@ -5,6 +5,13 @@
       <input md-input placeholder="{{ 'INDEXPAGE_FILTER' | translate}}" [(ngModel)]="filterString" type="text">
     </md-input-container>
 
+    <table-preferences
+      *ngIf="columnPreferencesEnabled"
+      [class.table-preferences--alone]="!filterEnabled"
+      [columnParams]="columnParams"
+      [small]="true">
+    </table-preferences>
+
     <ng-container *ngIf="(associationEnabled || customTopMenuOptions.length > 0) && hasWritePermission">
       <md-icon class="entity-view__table-component__header__action" [class.alone]="!filterEnabled" [md-menu-trigger-for]="optionsMenu">more_vert</md-icon>
       <md-menu #optionsMenu="mdMenu" x-position="before">
@@ -16,31 +23,40 @@
   <table class="highlight table__custom">
     <thead>
     <tr>
-      <th *ngFor="let params of columnParams" (click)="setSortedColumnParams(params)" [class.cell--align-right]="params.align === 'right'">
-        {{params.label | translate}}
-        <md-icon *ngIf="sortEnabled && params.sortApplied">{{params.sortOrder === 'asc' ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</md-icon>
-      </th>
+      <ng-container *ngFor="let params of columnParams">
+        <ng-container *ngIf="params.selected">
+          <th (click)="setSortedColumnParams(params)" [class.cell--align-right]="params.align === 'right'">
+            {{params.label | translate}}
+            <md-icon *ngIf="sortEnabled && params.sortApplied">{{params.sortOrder === 'asc' ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</md-icon>
+          </th>
+        </ng-container>
+      </ng-container>
       <th></th>
     </tr>
     </thead>
 
     <tbody>
+
     <tr *ngFor="let entity of entities | filterEntitiesByParams: columnParams: filterString | sortEntities: sortedColumnParams.mappingFunction: sortedColumnParams.sortOrder">
-      <td *ngFor="let params of columnParams" [class.cell--align-right]="params.align === 'right'" (click)="view.emit(entity)">
-        <div class="codeblock" *ngIf="params.code; else noCode">
-          {{params.mappingFunction(entity)}}
-        </div>
-        <ng-template #noCode>
-          <div [class.flex-custom]="params.copy" [class.flex-custom--center]="params.copy">
-            <ng-container *ngIf="params.number; else nan">{{params.mappingFunction(entity) | numberlocale}}</ng-container>
-            <ng-template #nan>
-              <ng-container *ngIf="params.translate; else notranslate">{{params.mappingFunction(entity) | translate}}</ng-container>
-              <ng-template #notranslate>{{params.mappingFunction(entity)}}</ng-template>
+      <ng-container *ngFor="let params of columnParams">
+        <ng-container *ngIf="params.selected">
+          <td [class.cell--align-right]="params.align === 'right'" (click)="view.emit(entity)">
+            <div class="codeblock" *ngIf="params.code; else noCode">
+              {{params.mappingFunction(entity)}}
+            </div>
+            <ng-template #noCode>
+              <div [class.flex-custom]="params.copy" [class.flex-custom--center]="params.copy">
+                <ng-container *ngIf="params.number; else nan">{{params.mappingFunction(entity) | numberlocale}}</ng-container>
+                <ng-template #nan>
+                  <ng-container *ngIf="params.translate; else notranslate">{{params.mappingFunction(entity) | translate}}</ng-container>
+                  <ng-template #notranslate>{{params.mappingFunction(entity)}}</ng-template>
+                </ng-template>
+                <md-icon *ngIf="params.copy" class="copy-icon" md-tooltip="{{'SHARE_COPY' | translate}}" ngxClipboard [cbContent]="params.mappingFunction(entity)">content_copy</md-icon>
+              </div>
             </ng-template>
-            <md-icon *ngIf="params.copy" class="copy-icon" md-tooltip="{{'SHARE_COPY' | translate}}" ngxClipboard [cbContent]="params.mappingFunction(entity)">content_copy</md-icon>
-          </div>
-        </ng-template>
-      </td>
+          </td>
+        </ng-container>
+      </ng-container>
       <td>
         <ng-container *ngIf="showMenuOptions">
           <md-icon [md-menu-trigger-for]="actionsMenu">more_vert</md-icon>
