--- a/src/app/pages/components/table-memory/table-memory.component.scss
+++ b/src/app/pages/components/table-memory/table-memory.component.scss
@@ -2,3 +2,13 @@
   margin-left: 15px;
   cursor: pointer;
 }
+
+table-preferences {
+  margin-left: 8px;
+  margin-right: 2px;
+  color: rgba(0, 0, 0, 0.4);
+}
+
+.table-preferences--alone {
+  margin-left: auto;
+}
