--- a/src/app/pages/components/table-preferences/table-preferences.component.html
+++ b/src/app/pages/components/table-preferences/table-preferences.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" [class.small]="small">
   <md-icon (click)="toggleParams()">view_column</md-icon>
 
   <div *ngIf="showParams" class="params-container">
