--- a/src/app/pages/components/table-preferences/table-preferences.component.scss
+++ b/src/app/pages/components/table-preferences/table-preferences.component.scss
@@ -2,9 +2,18 @@
   position: relative;
 }
 
+.small {
+  display: flex;
+
+  md-icon {
+    font-size: 18px;
+    width: 18px;
+    height: 18px;
+  }
+}
 .params-container {
   position: absolute;
-  top: 10px;
+  top: 0;
   right: 25px;
   z-index: 2;
   background: white;
