--- a/src/app/pages/affiliates-page/affiliate-view/affiliate-trackers/affiliate-trackers.component.html
+++ b/src/app/pages/affiliates-page/affiliate-view/affiliate-trackers/affiliate-trackers.component.html
@@ -1,7 +1,11 @@
 <div class="entity-view__table-component">
   <div class="entity-view__table-component__header entity-view__table-component__header--homepage">
     <div class="entity-view__table-component__header__title">{{'AFFILIATE_TRACKING_TITLE' | translate}}</div>
-    <md-icon class="entity-view__table-component__header__action alone" [md-menu-trigger-for]="optionsMenu">more_vert</md-icon>
+    <table-preferences
+      [columnParams]="columnParams"
+      [small]="true">
+    </table-preferences>
+    <md-icon class="entity-view__table-component__header__action" [md-menu-trigger-for]="optionsMenu">more_vert</md-icon>
     <md-menu #optionsMenu="mdMenu" x-position="before">
       <button md-menu-item (click)="showAddTracker()">{{'AFFILIATE_TRACKING_ASSOCIATE' | translate}}</button>
     </md-menu>
@@ -9,22 +13,30 @@
   <table class="highlight table__custom">
     <thead>
     <tr>
-      <th *ngFor="let params of columnParams" (click)="setSortedColumnParams(params)" [class.cell--align-right]="params.align === 'right'" [class.cell--codeblock]="params.code">
-        {{params.label | translate}}
-        <md-icon *ngIf="params.sortApplied">{{params.sortOrder === 'asc' ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</md-icon>
-      </th>
+      <ng-container *ngFor="let params of columnParams">
+        <ng-container *ngIf="params.selected">
+          <th (click)="setSortedColumnParams(params)" [class.cell--align-right]="params.align === 'right'" [class.cell--codeblock]="params.code">
+            {{params.label | translate}}
+            <md-icon *ngIf="params.sortApplied">{{params.sortOrder === 'asc' ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</md-icon>
+          </th>
+        </ng-container>
+      </ng-container>
       <th></th>
     </tr>
     </thead>
 
     <tbody>
     <tr *ngFor="let entity of entities | filterEntities: filterValue | sortEntities: sortedColumnParams.mappingFunction: sortedColumnParams.sortOrder">
-      <td *ngFor="let params of columnParams" [class.cell--align-right]="params.align === 'right'" [routerLink]="['/trackers', entity.id]">
-        <div class="codeblock" *ngIf="params.code; else noCode">
-          {{params.mappingFunction(entity)}}
-        </div>
-        <ng-template #noCode>{{params.mappingFunction(entity)}}</ng-template>
-      </td>
+      <ng-container *ngFor="let params of columnParams">
+        <ng-container *ngIf="params.selected">
+          <td [class.cell--align-right]="params.align === 'right'" [routerLink]="['/trackers', entity.id]">
+            <div class="codeblock" *ngIf="params.code; else noCode">
+              {{params.mappingFunction(entity)}}
+            </div>
+            <ng-template #noCode>{{params.mappingFunction(entity)}}</ng-template>
+          </td>
+        </ng-container>
+      </ng-container>
       <td>
         <button md-icon-button [md-menu-trigger-for]="actionsMenu"><md-icon>more_vert</md-icon></button>
         <md-menu #actionsMenu="mdMenu" x-position="before">
