--- a/src/app/pages/bills-page/bill-index/invoice-table/invoice-table.component.scss
+++ b/src/app/pages/bills-page/bill-index/invoice-table/invoice-table.component.scss
@@ -26,3 +26,9 @@
     padding-bottom: 40px;
   }
 }
+
+table-preferences {
+  margin-left: auto;;
+  margin-right: 6px;
+  color: rgba(0, 0, 0, 0.4);
+}
