--- a/src/app/pages/customers-page/customer-view/customer-rebills/customer-rebills.component.scss
+++ b/src/app/pages/customers-page/customer-view/customer-rebills/customer-rebills.component.scss
@@ -1,1 +1,9 @@
+table-preferences {
+  margin-left: 4px;
+  margin-right: 2px;
+  color: rgba(0, 0, 0, 0.4);
+}
 
+.table-preferences--alone {
+  margin-left: auto;
+}
