--- a/src/app/pages/products-page/product-view/product-campaigns/product-campaigns.component.html
+++ b/src/app/pages/products-page/product-view/product-campaigns/product-campaigns.component.html
@@ -11,14 +11,22 @@
       (next)="next()"
       (updateLimit)="updateLimit($event)">
     </table-pagination>
+    <table-preferences
+      [columnParams]="columnParams"
+      [small]="true">
+    </table-preferences>
   </div>
   <table class="highlight table__custom">
     <thead>
     <tr>
-      <th *ngFor="let params of columnParams" (click)="setSortedColumnParams(params)" [class.cell--align-right]="params.align === 'right'">
-        {{params.label | translate}}
-        <md-icon *ngIf="params.sortApplied">{{params.sortOrder === 'asc' ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</md-icon>
-      </th>
+      <ng-container *ngFor="let params of columnParams">
+        <ng-container *ngIf="params.selected">
+          <th (click)="setSortedColumnParams(params)" [class.cell--align-right]="params.align === 'right'">
+            {{params.label | translate}}
+            <md-icon *ngIf="params.sortApplied">{{params.sortOrder === 'asc' ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</md-icon>
+          </th>
+        </ng-container>
+      </ng-container>
       <th></th>
     </tr>
     </thead>
