--- a/src/app/pages/smtp-providers-page/smtp-provider-email-templates/smtp-provider-email-templates.component.html
+++ b/src/app/pages/smtp-providers-page/smtp-provider-email-templates/smtp-provider-email-templates.component.html
@@ -1,29 +1,41 @@
 <div class="entity-view__table-component">
-  <div class="entity-view__table-component__header">
+  <div class="entity-view__card__header">
     <div class="entity-view__table-component__header__title">{{'SMTP_EMAILTEMPLATE_TITLE' | translate}}</div>
+    <table-preferences
+      [columnParams]="columnParams"
+      [small]="true">
+    </table-preferences>
   </div>
   <table class="highlight table__custom">
     <thead>
     <tr>
-      <th *ngFor="let params of columnParams" (click)="setSortedColumnParams(params)" [class.cell--align-right]="params.align === 'right'" [class.cell--codeblock]="params.code">
-        {{params.label | translate}}
-        <md-icon *ngIf="params.sortApplied">{{params.sortOrder === 'asc' ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</md-icon>
-      </th>
+      <ng-container *ngFor="let params of columnParams">
+        <ng-container *ngIf="params.selected">
+          <th (click)="setSortedColumnParams(params)" [class.cell--align-right]="params.align === 'right'" [class.cell--codeblock]="params.code">
+            {{params.label | translate}}
+            <md-icon *ngIf="params.sortApplied">{{params.sortOrder === 'asc' ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</md-icon>
+          </th>
+        </ng-container>
+      </ng-container>
       <th></th>
     </tr>
     </thead>
 
     <tbody>
     <tr *ngFor="let entity of entities | filterEntities: filterValue | sortEntities: sortedColumnParams.mappingFunction: sortedColumnParams.sortOrder">
-      <td *ngFor="let params of columnParams" [class.cell--align-right]="params.align === 'right'" [routerLink]="['/emailtemplates', entity.id]">
-        <div class="codeblock" *ngIf="params.code; else noCode">
-          {{params.mappingFunction(entity)}}
-        </div>
-        <ng-template #noCode>
-          <ng-container *ngIf="params.number; else nan">{{param.mappingFunction(entity) | numberlocale}}</ng-container>
-          <ng-template #nan>{{params.mappingFunction(entity)}}</ng-template>
-        </ng-template>
-      </td>
+      <ng-container *ngFor="let params of columnParams">
+        <ng-container *ngIf="params.selected">
+          <td [class.cell--align-right]="params.align === 'right'" [routerLink]="['/emailtemplates', entity.id]">
+            <div class="codeblock" *ngIf="params.code; else noCode">
+              {{params.mappingFunction(entity)}}
+            </div>
+            <ng-template #noCode>
+              <ng-container *ngIf="params.number; else nan">{{param.mappingFunction(entity) | numberlocale}}</ng-container>
+              <ng-template #nan>{{params.mappingFunction(entity)}}</ng-template>
+            </ng-template>
+          </td>
+        </ng-container>
+      </ng-container>
       <td>
         <md-icon [md-menu-trigger-for]="actionsMenu">more_vert</md-icon>
         <md-menu #actionsMenu="mdMenu" x-position="before">
