--- a/src/app/reports/components/report-table/report-table.component.html
+++ b/src/app/reports/components/report-table/report-table.component.html
@@ -13,6 +13,10 @@
       (next)="next.emit($event)"
       (updateLimit)="updateLimit.emit($event)">
     </table-pagination>
+    <table-preferences
+      [columnParams]="columnParams"
+      [small]="true">
+    </table-preferences>
     <md-icon class="reports-table__title__icon--more" [md-menu-trigger-for]="downloadOptions">more_vert</md-icon>
     <md-menu #downloadOptions="mdMenu" x-position="before">
       <button md-menu-item (click)="download.emit('json')"> {{'CHART_DOWNLOADJSON' | translate}}</button>
@@ -25,26 +29,33 @@
     <table class="highlight">
       <thead>
         <tr>
-          <th *ngFor="let params of columnParams" (click)="setSortParams(params)" [class.cell--align-right]="params.align === 'right'">
-            {{params.label | translate}}
-            <ng-container *ngIf="params.sortApplied">
-              <md-icon *ngIf="params.sortOrder === 'asc'; else downArrow;">keyboard_arrow_down</md-icon>
-              <ng-template #downArrow><md-icon>keyboard_arrow_up</md-icon></ng-template>
+          <ng-container *ngFor="let params of columnParams">
+            <ng-container *ngIf="params.selected">
+              <th (click)="setSortParams(params)" [class.cell--align-right]="params.align === 'right'">
+                {{params.label | translate}}
+                <ng-container *ngIf="params.sortApplied">
+                  <md-icon *ngIf="params.sortOrder === 'asc'; else downArrow;">keyboard_arrow_down</md-icon>
+                  <ng-template #downArrow><md-icon>keyboard_arrow_up</md-icon></ng-template>
+                </ng-container>
+              </th>
             </ng-container>
-          </th>
+          </ng-container>
         </tr>
       </thead>
 
       <tbody>
         <tr *ngFor="let d of data | filterEntitiesByParams: columnParams: filterString | sortEntities: sortParams.mappingFunction: sortParams.sortOrder">
-          <td *ngFor="let params of columnParams"
-              [class.cell--align-right]="params.align === 'right'"
-              [class.cell--link]="params.isLink"
-              (click)="onCellClicked(params, d)"
-              [class.filter-cell]="params.isFilter">
-            <ng-container *ngIf="params.number; else nan">{{params.mappingFunction(d) | numberlocale}}</ng-container>
-            <ng-template #nan>{{params.mappingFunction(d)}}</ng-template>
-            </td>
+          <ng-container *ngFor="let params of columnParams">
+            <ng-container *ngIf="params.selected">
+              <td [class.cell--align-right]="params.align === 'right'"
+                  [class.cell--link]="params.isLink"
+                  (click)="onCellClicked(params, d)"
+                  [class.filter-cell]="params.isFilter">
+                <ng-container *ngIf="params.number; else nan">{{params.mappingFunction(d) | numberlocale}}</ng-container>
+                <ng-template #nan>{{params.mappingFunction(d)}}</ng-template>
+              </td>
+            </ng-container>
+          </ng-container>
         </tr>
       </tbody>
     </table>
