Add bulk select and delete operation to index tables

--- a/src/app/pages/accounts-page/account-index/accounts.component.html
+++ b/src/app/pages/accounts-page/account-index/accounts.component.html
@@ -25,6 +25,7 @@
         (exportClicked)="exportEntity($event.id)"
         (editClicked)="editEntity($event.id)"
         (deleteClicked)="deleteEntity($event.id)"
+        (deleteManyClicked)="deleteMany($event)"
         (refreshData)="refreshData()"
         (customOptionClicked)="actAs($event)"
 
