--- a/src/app/pages/credit-cards-page/credit-cards-index/credit-cards.component.html
+++ b/src/app/pages/credit-cards-page/credit-cards-index/credit-cards.component.html
@@ -22,6 +22,7 @@
         (exportClicked)="exportEntity($event.id)"
         (editClicked)="editEntity($event.id)"
         (deleteClicked)="deleteEntity($event.id)"
+        (deleteManyClicked)="deleteMany($event)"
         (refreshData)="refreshData()"
 
         [limit]="limit"
