--- a/src/app/pages/merchant-providers-page/merchant-providers-index/merchant-providers.component.html
+++ b/src/app/pages/merchant-providers-page/merchant-providers-index/merchant-providers.component.html
@@ -23,6 +23,7 @@
         (exportClicked)="exportEntity($event.id)"
         (editClicked)="editEntity($event.id)"
         (deleteClicked)="deleteEntity($event.id)"
+        (deleteManyClicked)="deleteMany($event)"
         (refreshData)="refreshData()"
 
         [limit]="limit"
