--- a/src/app/pages/components/entities-table/entities-table.component.scss
+++ b/src/app/pages/components/entities-table/entities-table.component.scss
@@ -8,3 +8,17 @@
   padding: 0 !important;
   text-align: center;
 }
+
+md-checkbox {
+  color: rgba(0,0,0,0.4);
+}
+
+.selected {
+  transition: all 250ms ease-in-out;
+  box-shadow: 0 1px 4px rgba(0,0,0,0.3);
+  background: #f2f2f2;
+}
+
+tr {
+  transition: all 250ms ease-in-out !important;
+}
