Reorder left navbar

--- a/src/assets/scss/_navigation.scss
+++ b/src/assets/scss/_navigation.scss
@@ -89,7 +89,8 @@ md-sidenav-layout {
 }
 
 md-nav-list.side-navigation {
-  padding-top: 32px;
+  padding-top: 25px;
+  width: 100%;
 
   a[md-list-item] {
     position: relative;
