--- a/src/app/pages/fulfillment-providers/fulfillment-providers-index/fulfillment-providers.component.html
+++ b/src/app/pages/fulfillment-providers/fulfillment-providers-index/fulfillment-providers.component.html
@@ -1,6 +1,7 @@
 <div class="entity-index">
   <div class="entity-index__title">
     {{'FULFILLMENT_INDEX_TITLE' | translate}}
+    <search-input class="entity-index__search" (onSearch)="setSearchString($event)"></search-input>
     <md-input [(ngModel)]="filterValue" placeholder="{{'INDEXPAGE_FILTER' | translate}}"></md-input>
     <table-preferences class="entity-index__preferences" [columnParams]="columnParams"></table-preferences>
   </div>
