--- a/src/app/pages/products-page/products-index/products.component.html
+++ b/src/app/pages/products-page/products-index/products.component.html
@@ -1,8 +1,8 @@
 <div class="entity-index">
   <div class="entity-index__title">
     {{'PRODUCT_INDEX_TITLE' | translate}}
-    <!--<md-input [(ngModel)]="filterValue" placeholder="{{'INDEXPAGE_FILTER' | translate}}"></md-input>-->
-    <md-input [(ngModel)]="searchValue" placeholder="Search" (keydown)="down($event)"></md-input>
+    <search-input class="entity-index__search" (onSearch)="setSearchString($event)"></search-input>
+    <md-input [(ngModel)]="filterValue" placeholder="{{'INDEXPAGE_FILTER' | translate}}"></md-input>
     <table-preferences class="entity-index__preferences" [columnParams]="columnParams"></table-preferences>
   </div>
 
