--- a/src/assets/scss/_forms.scss
+++ b/src/assets/scss/_forms.scss
@@ -243,3 +243,9 @@ dropdown-component {
   }
 }
 
+.checkbox-blue.md-checkbox-checked {
+  .md-checkbox-background {
+    background-color: #4A90E2;;
+  }
+}
+
