--- a/src/app/pages/merchant-provider-groups-page/merchant-provider-group-view/merchant-provider-group-add-new/merchant-provider-group-add-new.component.html
+++ b/src/app/pages/merchant-provider-groups-page/merchant-provider-group-view/merchant-provider-group-add-new/merchant-provider-group-add-new.component.html
@@ -11,7 +11,7 @@
 
   <div class="entity-view__card__actions">
     <div (click)="cancel.emit(true)">{{'LOADBALANCER_INFO_CANCEL' | translate}}</div>
-    <div (click)="saveLoadBalancer()">{{'LOADBALANCER_INFO_SAVE' | translate}}</div>
+    <div (click)="saveMerchantProviderGroup()">{{'LOADBALANCER_INFO_SAVE' | translate}}</div>
   </div>
 </div>
 
