--- a/src/app/pages/products-page/product-view/product-merchant-provider-group-associations/product-merchant-provider-group-associations.component.html
+++ b/src/app/pages/products-page/product-view/product-merchant-provider-group-associations/product-merchant-provider-group-associations.component.html
@@ -39,7 +39,7 @@
     <tr *ngFor="let entity of entities | filterEntities: filterValue | sortEntities: sortedColumnParams.mappingFunction: sortedColumnParams.sortOrder">
       <ng-container *ngFor="let params of columnParams">
         <ng-container *ngIf="params.selected">
-          <td [class.cell--align-right]="params.align === 'right'" [routerLink]="['/productschedules', entity.id]">
+          <td [class.cell--align-right]="params.align === 'right'">
             <ng-container *ngIf="params.number; else nan">{{params.mappingFunction(entity) | numberlocale}}</ng-container>
             <ng-template #nan>{{params.mappingFunction(entity)}}</ng-template>
           </td>
