--- a/src/app/pages/merchant-provider-groups-page/merchant-provider-group-view/merchant-provider-group-view.component.html
+++ b/src/app/pages/merchant-provider-groups-page/merchant-provider-group-view/merchant-provider-group-view.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="entity; else spinner" class="entity-view">
-  <div class="entity-view__title">{{'LOADBALANCER_TITLE' | translate}}</div>
+  <div class="entity-view__title">{{'MERCHANTPROVIDERGROUP_TITLE' | translate}}</div>
 
   <div (click)="navigation.back()" class="entity-view__change-mode"><md-icon>reply</md-icon></div>
 
@@ -15,17 +15,17 @@
         </span>
         <ng-template #createForm>
           <md-input-container [class.error]="detailsFormInvalid && !entity.name">
-            <input required md-input placeholder="{{(addMode ? 'LOADBALANCER_INFO_NAME' : '') | translate}}" type="text" [(ngModel)]="entity.name">
+            <input required md-input placeholder="{{(addMode ? 'MERCHANTPROVIDERGROUP_INFO_NAME' : '') | translate}}" type="text" [(ngModel)]="entity.name">
           </md-input-container>
         </ng-template>
       </div>
     </div>
 
     <div class="entity-view__info__edit">
-      <div *ngIf="viewMode; else editButtons" class="entity-view__info__edit__update" (click)="setMode(modes.Update)">{{'LOADBALANCER_INFO_EDIT' | translate}}</div>
+      <div *ngIf="viewMode; else editButtons" class="entity-view__info__edit__update" (click)="setMode(modes.Update)">{{'MERCHANTPROVIDERGROUP_INFO_EDIT' | translate}}</div>
       <ng-template #editButtons>
-        <div *ngIf="updateMode" (click)="cancelUpdate()">{{'LOADBALANCER_INFO_CANCEL' | translate}}</div>
-        <div class="entity-view__info__edit__update" (click)="updateMerchantProviderGroup()"> {{ (addMode ? 'LOADBALANCER_INFO_SAVE' : 'LOADBALANCER_INFO_UPDATE') | translate}}</div>
+        <div *ngIf="updateMode" (click)="cancelUpdate()">{{'MERCHANTPROVIDERGROUP_INFO_CANCEL' | translate}}</div>
+        <div class="entity-view__info__edit__update" (click)="updateMerchantProviderGroup()"> {{ (addMode ? 'MERCHANTPROVIDERGROUP_INFO_SAVE' : 'MERCHANTPROVIDERGROUP_INFO_UPDATE') | translate}}</div>
       </ng-template>
     </div>
   </div>
@@ -36,11 +36,11 @@
     <md-tab>
       <div class="entity-view__card">
         <div class="entity-view__card__header">
-          <div class="entity-view__card__header__title">{{'LOADBALANCER_MERCHANT_ADDTITLE' | translate}}</div>
+          <div class="entity-view__card__header__title">{{'MERCHANTPROVIDERGROUP_MERCHANT_ADDTITLE' | translate}}</div>
         </div>
         <form #merchantProviderInputForm="ngForm" class="entity-view__card__content">
           <md-input-container style="width: 110px" class="entity-view__card__content__item" [class.error]="formInvalid && !providerToAdd.distribution">
-            <input required md-input placeholder="{{'LOADBALANCER_MERCHANT_DISTRIBUTION' | translate}}" name="distribution" (keydown)="isFloatNumeric($event)" [(ngModel)]="providerToAdd.distribution" type="text">
+            <input required md-input placeholder="{{'MERCHANTPROVIDERGROUP_MERCHANT_DISTRIBUTION' | translate}}" name="distribution" (keydown)="isFloatNumeric($event)" [(ngModel)]="providerToAdd.distribution" type="text">
           </md-input-container>
 
           <autocomplete-input style="font-size: 14px;"
@@ -48,15 +48,15 @@
                               [mapFunction]="merchantProviderMapper"
                               [initialValue]="providerToAdd.merchantProvider"
                               [options]="merchantProviderService.entities$ | async"
-                              [placeholder]="'LOADBALANCER_MERCHANT_MERCHANT' | translate"
+                              [placeholder]="'MERCHANTPROVIDERGROUP_MERCHANT_MERCHANT' | translate"
                               [required]="true"
                               (selected)="providerToAdd.merchantProvider = $event">
           </autocomplete-input>
         </form>
 
         <div class="entity-view__card__actions">
-          <div (click)="clearAddProvider()">{{'LOADBALANCER_MERCHANT_CLEAR' | translate}}</div>
-          <div (click)="addProvider(merchantProviderInputForm.form.valid)">{{'LOADBALANCER_MERCHANT_ADD' | translate}}</div>
+          <div (click)="clearAddProvider()">{{'MERCHANTPROVIDERGROUP_MERCHANT_CLEAR' | translate}}</div>
+          <div (click)="addProvider(merchantProviderInputForm.form.valid)">{{'MERCHANTPROVIDERGROUP_MERCHANT_ADD' | translate}}</div>
         </div>
       </div>
 
@@ -79,5 +79,5 @@
 </div>
 
 <ng-template #spinner>
-  <spe-loader [numberOfTabs]="1" [numberOfCards]="1" [title]="'LOADBALANCER_TITLE' | translate"></spe-loader>
+  <spe-loader [numberOfTabs]="1" [numberOfCards]="1" [title]="'MERCHANTPROVIDERGROUP_TITLE' | translate"></spe-loader>
 </ng-template>
